# cryptoram-decoder

./: .gitattributes  .gitignore  README.md
.github/workflows/: backend_tests.yml  tests.yml
backend/: Dockerfile  api.py  docker-compose.yml  pyproject.toml  tox.ini
backend/src/app/: api.py
backend/src/utils/: constants.py  models.py  sse.py
backend/tests/: test_decipher_endpoint.py  test_decipher_stream_endpoint.py
frontend/: home.py  pyproject.toml  run_streamlit.sh
frontend/decoder-ui/: package-lock.json  package.json  tailwind.config.ts
frontend/decoder-ui/src/app/: globals.css  layout.tsx  page.tsx
frontend/decoder-ui/src/app/components/: client-image.tsx  custom-body.tsx  custom-select.tsx  custom-slider.tsx  header.tsx  link-ref.tsx  page-content.tsx  page-text.tsx  sidebar.tsx  textarea.tsx  tooltips.tsx
frontend/decoder-ui/src/app/components/examples/: examples.tsx
frontend/decoder-ui/src/components/: custom-body.tsx  custom-select.tsx  custom-slider.tsx  header.tsx  link-ref.tsx  page-content.tsx  page-text.tsx  sidebar.tsx  textarea.tsx  tooltips.tsx
frontend/decoder-ui/src/components/examples/: examples.tsx
